--- a/look-and-feel/Leaf-Dark/metadata.desktop
+++ b/look-and-feel/Leaf-Dark/metadata.desktop
@@ -12,8 +12,8 @@ X-KDE-PluginInfo-Author=qewer33
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-License=GPLv3
-X-KDE-PluginInfo-Name=Leaf-Dark
-X-KDE-PluginInfo-Version=20211226
+X-KDE-PluginInfo-Name=leaf-dark
+X-KDE-PluginInfo-Version=0.1
 X-KDE-PluginInfo-Website=
 X-KDE-fallbackPackage=org.kde.breezedark.desktop
 X-Plasma-MainScript=defaults
