--- a/look-and-feel/Leaf-Dark/metadata.desktop
+++ b/look-and-feel/Leaf-Dark/metadata.desktop
@@ -9,12 +9,11 @@ Type=Service
 X-KDE-ServiceTypes=Plasma/LookAndFeel
 X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=qewer33
-X-KDE-PluginInfo-Email=
+X-KDE-PluginInfo-Email=qewer33@protonmail.com
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-License=GPLv3
 X-KDE-PluginInfo-Name=leaf-dark
 X-KDE-PluginInfo-Version=0.1
-X-KDE-PluginInfo-Website=
 X-KDE-fallbackPackage=org.kde.breezedark.desktop
 X-Plasma-MainScript=defaults
-X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1739715,kns://plasma-themes.knsrc/api.kde-look.org/1739737,kns://aurorae.knsrc/api.kde-look.org/1739752,kns://icons.knsrc/api.kde-look.org/1166289,kns://xcursor.knsrc/api.kde-look.org/1346778,kns://wallpaper.knsrc/api.kde-look.org/1476107,kns://sddmtheme.knsrc/api.kde-look.org/1476117
+X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1739715,kns://plasma-themes.knsrc/api.kde-look.org/1739737,kns://aurorae.knsrc/api.kde-look.org/1739752,kns://icons.knsrc/api.kde-look.org/1166289,kns://wallpaper.knsrc/api.kde-look.org/1739944
