Update to Plasma 6

--- a/look-and-feel/leaf-dark/metadata.desktop
+++ b/look-and-feel/leaf-dark/metadata.desktop
@@ -9,11 +9,11 @@ Type=Service
 X-KDE-ServiceTypes=Plasma/LookAndFeel
 X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=qewer33
-X-KDE-PluginInfo-Email=qewer33@protonmail.com
+X-KDE-PluginInfo-Email=qewer3@qewer.dev
 X-KDE-PluginInfo-Category=
-X-KDE-PluginInfo-License=GPLv3
+X-KDE-PluginInfo-License=GPL-3.0+
 X-KDE-PluginInfo-Name=leaf-dark
-X-KDE-PluginInfo-Version=0.1
+X-KDE-PluginInfo-Version=0.2
 X-KDE-fallbackPackage=org.kde.breezedark.desktop
 X-Plasma-MainScript=defaults
 X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1739715,kns://plasma-themes.knsrc/api.kde-look.org/1739737,kns://aurorae.knsrc/api.kde-look.org/1739752,kns://icons.knsrc/api.kde-look.org/1166289,kns://wallpaper.knsrc/api.kde-look.org/1739944
