--- a/wallpapers/leaf-light/metadata.desktop
+++ b/wallpapers/leaf-light/metadata.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Leaf Light
-X-KDE-PluginInfo-Name=leaf-light
+Name=Leaf Light Wallpaper
+X-KDE-PluginInfo-Name=leaf-light-wallpaper
 X-KDE-PluginInfo-Author=qewer33
-X-KDE-PluginInfo-Email=qewer33@protonmail.com
-X-KDE-PluginInfo-License=GPLv3
+X-KDE-PluginInfo-Email=qewer@qewer.dev
+X-KDE-PluginInfo-License=GPL-3.0+
