--- a/aurorae/leaf-dark-color/metadata.desktop
+++ b/aurorae/leaf-dark-color/metadata.desktop
@@ -3,6 +3,6 @@ Name=Leaf Dark Color
 X-KDE-PluginInfo-Author=qewer33
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
-X-KDE-PluginInfo-License=GPLv3
+X-KDE-PluginInfo-License=GPL-3.0+
 X-KDE-PluginInfo-Name=leaf-dark-color
-X-KDE-PluginInfo-Version=0.1
+X-KDE-PluginInfo-Version=0.2
