--- a/wallpapers/leaf-dark/metadata.desktop
+++ b/wallpapers/leaf-dark/metadata.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Leaf Dark
-X-KDE-PluginInfo-Name=leaf-dark
+Name=Leaf Dark Wallpaper
+X-KDE-PluginInfo-Name=leaf-dark-wallpaper
 X-KDE-PluginInfo-Author=qewer33
-X-KDE-PluginInfo-Email=qewer33@protonmail.com
-X-KDE-PluginInfo-License=GPLv3
+X-KDE-PluginInfo-Email=qewer@qewer.dev
+X-KDE-PluginInfo-License=GPL-3.0+
